<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".create_profile"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/circular_img"
            >
            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:background="@drawable/circle">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/person_dp"
                    android:layout_centerInParent="true"
                    android:id="@+id/profile_img_acp"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/circle_white"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="-5dp"
                android:id="@+id/select_img_acp"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="@drawable/ic_photo_camera_black_24dp" />
            </RelativeLayout>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="vertical"
            android:layout_below="@id/circular_img"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:background="@drawable/filled_rectangle" >

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="First Name"
                            android:layout_marginLeft="0dp"
                            android:background="@null"
                            android:paddingVertical="10dp"
                            android:paddingLeft="10dp"
                            android:id="@+id/first_name_et"
                            android:paddingStart="10dp"
                            android:layout_marginStart="0dp"
                            tools:ignore="RtlSymmetry" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:background="@drawable/filled_rectangle"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="Last Name"
                            android:layout_marginLeft="0dp"
                            android:background="@null"
                            android:paddingVertical="10dp"
                            android:paddingLeft="10dp"
                            android:id="@+id/last_name_et"
                            android:layout_marginStart="0dp"
                            android:paddingStart="10dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Date of birth"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/filled_rectangle" >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="DD/MM/YY"
                        android:background="@null"
                        android:paddingVertical="10dp"
                        android:paddingLeft="10dp"
                        android:id="@+id/dob_et"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/gender_rectangle_button"
                        android:text="Male"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginRight="10dp"
                        android:id="@+id/male_button"
                        android:layout_marginEnd="10dp" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/gender_rectangle_button"
                        android:text="Female"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginRight="10dp"
                        android:id="@+id/female_button"
                        android:layout_marginEnd="10dp" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/gender_rectangle_button"
                        android:text="Prefer not to say"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginRight="10dp"
                        android:padding="15dp"
                        android:id="@+id/none_button"
                        android:layout_marginEnd="10dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone number"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/filled_rectangle" >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="03001231231"
                        android:background="@null"
                        android:paddingVertical="10dp"
                        android:paddingLeft="10dp"
                        android:inputType="number"
                        android:id="@+id/phone_no_et"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bio"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/filled_rectangle" >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:hint="Tell more about yourself"
                        android:background="@null"
                        android:paddingVertical="10dp"
                        android:paddingLeft="10dp"
                        android:inputType="text|textMultiLine"
                        android:gravity="top"
                        android:id="@+id/bio_et"
                        android:paddingStart="10dp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save"
                android:background="@drawable/hollow_rectangle"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/save_create_profile"/>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
