<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:theme="@style/ThemeToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_weight="10">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_height="60dp"
            android:background="@drawable/filled_rectangle"
            android:layout_marginTop="20dp"
            android:elevation="2dp">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/search"
                android:id="@+id/search_button_ucl"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="15dp"
                />

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="Search"
                android:textSize="22sp"
                android:background="@null"
                android:layout_toRightOf="@id/search_button_ucl"
                android:layout_centerVertical="true"
                android:id="@+id/search_ac_ucl"
                android:layout_toEndOf="@id/search_button_ucl" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/circle"
                android:layout_centerVertical="true"
                android:id="@+id/img_ucl"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="83"
            android:id="@+id/rv_ucl"
            android:layout_marginTop="15dp"/>

    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/user_info"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/navigationView"/>


</androidx.drawerlayout.widget.DrawerLayout>