<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:id="@+id/bottom_sheet_profile_sp"
   >


    <ImageButton
        android:layout_width="70dp"
        android:layout_height="10dp"
        android:background="@drawable/bottom_sheet_hide_button"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/hide_sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hide_sp"
        android:textSize="20sp"
        android:textColor="#A8A8A8"
        android:layout_marginHorizontal="10dp"
        android:textStyle="bold"
        android:id="@+id/title_sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:orientation="horizontal"
        android:layout_below="@id/title_sp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        android:id="@+id/user_complete_info_sp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="-10dp"
            android:background="@drawable/circle"
            android:layout_marginStart="-10dp"
            android:id="@+id/dp_sp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="90"
            android:layout_marginStart="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:id="@+id/name_sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/call_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/contact_no_sp"
                    android:layout_marginStart="5dp" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/info_sp"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle_green"
            android:gravity="center"
            android:id="@+id/edit_sp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/edit_icon"
                android:elevation="5dp"/>
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/quote"
        android:layout_below="@id/user_complete_info_sp"
        android:id="@+id/quote_sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginHorizontal="10dp"
        android:layout_below="@id/quote_sp"
        android:layout_marginBottom="50dp"
        android:id="@+id/bio_sp"/>

</RelativeLayout>